<resources>
    <string name="action_settings">Speech Settings</string>
    <string name="action_american_voice">American Voice</string>
    <string name="action_indian_voice">Indian Voice</string>
    <string name="action_uk_voice">UK Voice</string>
    <string name="action_australian_voice">Australian Voice</string>
    <string name="action_about">About</string>
    <string name="setting_voice_locale">setting_voice_locale</string>
    <string name="setting_onboarding_complete">setting_onboarding_complete</string>
    <string name="var_preference_file_key">cc.timesReader</string>
    <string name="var_app_name">TimesReader</string>
    <string name="var_playing_item">var_playing_item</string>
    <string name="var_onboarding_title_1">Welcome!</string>
    <string name="var_onboarding_description_1">First things first...</string>
    <string name="var_onboarding_content_1">
        <big>
            <b>TimesReader will not function correctly if you don\'t have an online NYT subscription.</b>
            \n\nI created this free application to save my life and those of others. I was reading the New York Times
            on my phone every morning while speeding down the highway to work. Eventually it occurred to me that this was
            not a great idea. I assumed there was an app that would read me the news but I couldn\'t find one I liked,
            so I wrote my own. This is my first mobile project so I apologize for the rough edges.
            \n\nIf you have any concerns or comments, please feel free to contact me at <b>timesreader@gmail.com</b>. Just keep
            in mind that this app is completely free and I have a day job, so I may not be able to get back to you right away.
        </big>
    </string>
    <string name="var_onboarding_title_2">Features</string>
    <string name="var_onboarding_description_2"></string>
    <string name="var_onboarding_content_2">
        <big>
            <li>Swipe left and right to browse articles</li>
            \n\n<li>Back and forward buttons can also be used to browse</li>
            \n\n<li>Swipe down from top to refresh articles or return to first article</li>
            \n\n<li>Tap image to open article in browser or official NYT app (if installed)</li>
            \n\n<li>Next article will play automatically when current one finishes</li>
            \n\n<li>If next article doesn\'t play right away, wake up your phone (press wake button)</li>
        </big>
    </string>
</resources>